改用 JDK21 将部分调度器使用改用独立线程